--- a/test/fixtures/alerts.yml
+++ b/test/fixtures/alerts.yml
@@ -9,7 +9,7 @@ one:
   updated_at: 2018-12-02 11:41:13
 
 two:
-  sensor_idsensors: 
+  #sensor_idsensors: 
   message: MyString
   min: 1.5
   max: 1.5
