--- a/test/fixtures/sensor_histories.yml
+++ b/test/fixtures/sensor_histories.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
  one:
-  value: 
+  value: 10
   time: 2018-11-28 16:20:09
-  sensors_historycol: MyString
  two:
-  value: 
+  value: 20
   time: 2018-11-28 16:20:09
-  sensors_historycol: MyString
