--- a/test/fixtures/logins.yml
+++ b/test/fixtures/logins.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  nome: MyString
+  name: MyString
   password: MyString
 
 two:
-  nome: MyString
+  name: MyString
   password: MyString
