--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,14 +1,16 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  role: 1
   name: MyString
   email: MyString
   password_digest: MyString
   remember_token: MyString
 
 two:
+  role: 2
   name: MyString
   email: MyString
   password_digest: MyString
-  remember_token: MyString
+  remember_token: MyString 
 
