added line in tests on sensor history for test without sensor_id

--- a/test/fixtures/sensor_histories.yml
+++ b/test/fixtures/sensor_histories.yml
@@ -1,15 +1,23 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 one:
-  id: 500
+  id: 503
   value: 10
   time: 2018-11-28 16:20:09
+  sensor_id: 1
 two:
   value: 20
   time: 2018-11-28 16:20:09
+  sensor_id: 1
 three:
-  id: 501
+  id: 504
   time: 2018-11-28 16:20:09
+  sensor_id: 1
 four:
-  id: 502
+  id: 505
   value: 20
+  sensor_id: 1
+five:
+  id: 506
+  value: 20
+  time: 2018-11-28 16:20:09
 
