--- a/config/database.yml
+++ b/config/database.yml
@@ -37,13 +37,16 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: xcrivnhq
-  username: xcrivnhq
-  password: t3s_rDTIZo53x3khpqWb2MzmQIeFNzos
   encoding: unicode
-  host: baasu.db.elephantsql.com
+  # For details on connection pooling, see Rails configuration guide
+  # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
+  host: localhost
+  username: pg
+  password: pg
 
+  database: pg
+  
 #
 production:
   adapter: postgresql
