--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,13 +4,13 @@ one:
   role: 1
   name: MyString
   email: MyString
-  password_digest: MyString
+  password_digest: $2a$10$ffDUdeiDgIOh3bHcGvWAo.bFyJ0SAVcz5OPQdBkJADzV5Qz/BGwKa
   remember_token: MyString
 
 two:
   role: 0
   name: MyString
   email: MyString
-  password_digest: MyString
+  password_digest: $2a$10$ffDUdeiDgIOh3bHcGvWAo.bFyJ0SAVcz5OPQdBkJADzV5Qz/BGwKa
   remember_token: MyString 
 
